# ProtLlama

./: .gitignore  README.md  main.py  prepare_env.sh  pyproject.toml  run_af_benchmark.py  run_embedding_viz.py  test.py
artifacts/amino_acid_tokenizer/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
artifacts/causal_lm_tokenizer/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
artifacts/geneontology_tokenizer/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
artifacts/protein_tokenizer/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
experim/: embedding_viz.py
notebooks/: create_dataset_causal_lm.ipynb
prot_llama/: lm_modeling.py  modeling_llama.py  protgym_modeling.py
scripts/: prepare_data_for_af_benchmark.py  train_encoder_tokenizer.py  train_seq2seq_tokenizer.py  train_tokenizer_for_causal_lm.py
src/prot_llama/: __init__.py  configuration_prot_llama.py  lm_modeling.py  modeling_llama.py  modeling_prot_llama.py  seq2seq_modeling.py
