[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prot_llama"
version = "0.1"
authors = [
  { name="Khairi Abidi", email="khair.abidi@majesteye.com" },
]
description = "A suite LLama models for protein modeling"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/abidikhairi/ProtLlama"
Issues = "https://github.com/abidikhairi/ProtLlama/issues"